syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message CreateRiskBusinessCaseRequest {
	int32 SalesArrangementId = 1;
}

message CreateRiskBusinessCaseResponse {
	string RiskBusinessCaseId = 1;
	string RequestId = 2;
}